force-app/main/default/objects/CJFW_PaymentConfiguration__c/CJFW_PaymentConfiguration__c.object-meta.xml
<CustomObject>
    <description>[P2] - 매출/채권 - 약정감가 - 고객별 지급 설정</description>
    <label>Payment Configuration by Customer</label>
    <nameField>
        <displayFormat>PC{YY}{MM}{DD}{000000}</displayFormat>
        <label>Auto No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>