force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/ContractDepreciation__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciation__c</fullName>
    <description>약정감가여부</description>
    <label>Contract Depreciation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>