force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/ContractDepreciationRequest__c.field-meta.xml
<CustomField>
    <fullName>ContractDepreciationRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>약정 감가 신청</description>
    <label>Contract Depreciation Request</label>
    <referenceTo>CJFW_ContractDepreciationRequest__c</referenceTo>
    <relationshipLabel>Payment Configuration by Customer</relationshipLabel>
    <relationshipName>Payment_Configuration_by_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>