force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>약정감가 종료일</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>