force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/FM_CodeHeadOffice__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeHeadOffice__c</fullName>
    <formula>&quot;(&quot; + HeadOffice__r.CustomerID__c + &quot;) &quot; + HYPERLINK( HeadOffice__c , HeadOffice__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) Head Office</label>
    <type>Text</type>
</CustomField>