force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/FM_CodeSoldTo__c.field-meta.xml
<CustomField>
    <fullName>FM_CodeSoldTo__c</fullName>
    <formula>&quot;(&quot; + SoldTo__r.CustomerID__c + &quot;) &quot; + HYPERLINK( SoldTo__c , SoldTo__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(Code) SoldTo</label>
    <type>Text</type>
</CustomField>