force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/HeadOffice__c.field-meta.xml
<CustomField>
    <fullName>HeadOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>본점</description>
    <label>Head Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Configuration by Customer</relationshipLabel>
    <relationshipName>Payment_Configuration_by_Customer</relationshipName>
    <type>Lookup</type>
</CustomField>