force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/LocalPurchase__c.field-meta.xml
<CustomField>
    <fullName>LocalPurchase__c</fullName>
    <description>현지구매</description>
    <label>Local Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>