force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/SegmentationStatus__c.field-meta.xml
<CustomField>
    <fullName>SegmentationStatus__c</fullName>
    <description>구간여부</description>
    <label>Segmentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>