force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/ShipToUnit_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ShipToUnit_Adjustment__c</fullName>
    <description>관리처단위조정여부</description>
    <label>ShipTo Unit  Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>