force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/SoldTo__c.field-meta.xml
<CustomField>
    <fullName>SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SoldTo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Configuration by Customer (SoldTo)</relationshipLabel>
    <relationshipName>Payment_Configuration_by_Customer1</relationshipName>
    <type>Lookup</type>
</CustomField>