force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>약정감가 시작일</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>