force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/TotalDepreciation__c.field-meta.xml
<CustomField>
    <fullName>TotalDepreciation__c</fullName>
    <description>총액감가</description>
    <label>Total Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>