force-app/main/default/objects/CJFW_PaymentConfiguration__c/fields/TotalDepreciationPicklist__c.field-meta.xml
<CustomField>
    <fullName>TotalDepreciationPicklist__c</fullName>
    <description>총액감가여부</description>
    <label>Total Depreciation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YN</valueSetName>
    </valueSet>
</CustomField>